--- a/src/log-store/Cargo.toml
+++ b/src/log-store/Cargo.toml
@@ -14,6 +14,7 @@ async-stream.workspace = true
 async-trait.workspace = true
 byteorder = "1.4"
 bytes.workspace = true
+chrono.workspace = true
 common-base.workspace = true
 common-config.workspace = true
 common-error.workspace = true
@@ -24,6 +25,7 @@ common-telemetry.workspace = true
 dashmap.workspace = true
 futures-util.workspace = true
 futures.workspace = true
+itertools.workspace = true
 protobuf = { version = "2", features = ["bytes"] }
 raft-engine.workspace = true
 rskafka.workspace = true
