fix: check env before running kafka test

--- a/src/log-store/Cargo.toml
+++ b/src/log-store/Cargo.toml
@@ -40,3 +40,4 @@ tokio.workspace = true
 common-meta = { workspace = true, features = ["testing"] }
 common-test-util.workspace = true
 rand.workspace = true
+uuid.workspace = true
