--- a/src/promql/Cargo.toml
+++ b/src/promql/Cargo.toml
@@ -13,6 +13,7 @@ catalog.workspace = true
 common-catalog.workspace = true
 common-error.workspace = true
 common-macro.workspace = true
+common-query.workspace = true
 common-recordbatch.workspace = true
 common-telemetry.workspace = true
 datafusion.workspace = true
