fix: resolve review comments

--- a/src/log-store/Cargo.toml
+++ b/src/log-store/Cargo.toml
@@ -22,6 +22,8 @@ common-macro.workspace = true
 common-meta.workspace = true
 common-runtime.workspace = true
 common-telemetry.workspace = true
+common-time.workspace = true
+dashmap.workspace = true
 futures-util.workspace = true
 futures.workspace = true
 protobuf = { version = "2", features = ["bytes"] }
