--- a/config/standalone.example.toml
+++ b/config/standalone.example.toml
@@ -216,6 +216,25 @@ parallel_scan_channel_size = 32
 # Whether to allow stale WAL entries read during replay.
 allow_stale_entries = false
 
+[region_engine.mito.inverted_index]
+# Whether to create the index on flush.
+# - "auto": automatically
+# - "disable": never
+create_on_flush = "auto"
+# Whether to create the index on compaction.
+# - "auto": automatically
+# - "disable": never
+create_on_compaction = "auto"
+# Whether to apply the index on query
+# - "auto": automatically
+# - "disable": never
+apply_on_query = "auto"
+# Memory threshold for performing an external sort during index creation.
+# Setting to empty will disable external sorting, forcing all sorting operations to happen in memory.
+mem_threshold_on_create = "64M"
+# File system path to store intermediate files for external sorting (default `{data_home}/index_intermediate`).
+intermediate_path = ""
+
 # Log options
 # [logging]
 # Specify logs directory.
