--- a/src/cmd/Cargo.toml
+++ b/src/cmd/Cargo.toml
@@ -18,7 +18,7 @@ async-trait.workspace = true
 auth.workspace = true
 catalog.workspace = true
 chrono.workspace = true
-clap = { version = "4.4", features = ["derive"] }
+clap.workspace = true
 client.workspace = true
 common-base.workspace = true
 common-catalog.workspace = true
