--- a/src/servers/Cargo.toml
+++ b/src/servers/Cargo.toml
@@ -14,6 +14,7 @@ testing = []
 aide = { version = "0.9", features = ["axum"] }
 api.workspace = true
 arrow-flight.workspace = true
+arrow-ipc.workspace = true
 async-trait = "0.1"
 auth.workspace = true
 axum = { version = "0.6", features = ["headers"] }
