--- a/src/cmd/Cargo.toml
+++ b/src/cmd/Cargo.toml
@@ -29,6 +29,7 @@ common-meta.workspace = true
 common-procedure.workspace = true
 common-query.workspace = true
 common-recordbatch.workspace = true
+common-runtime.workspace = true
 common-telemetry = { workspace = true, features = [
     "deadlock_detection",
 ] }
