--- a/tests-fuzz/Cargo.toml
+++ b/tests-fuzz/Cargo.toml
@@ -9,12 +9,24 @@ async-trait = { workspace = true }
 common-error = { workspace = true }
 common-macro = { workspace = true }
 common-query = { workspace = true }
+common-telemetry = { workspace = true }
 datatypes = { workspace = true }
 derive_builder = { workspace = true }
-faker_rand = "0.1"
 lazy_static = { workspace = true }
 partition = { workspace = true }
 rand = { workspace = true }
+rand_chacha = "0.3.1"
 serde = { workspace = true }
+serde_json = { workspace = true }
 snafu = { workspace = true }
 sql = { workspace = true }
+
+[dev-dependencies]
+dotenv = "0.15"
+sqlx = { version = "0.6", features = [
+    "runtime-tokio-rustls",
+    "mysql",
+    "postgres",
+    "chrono",
+] }
+tokio = { workspace = true }
