--- a/tests-fuzz/Cargo.toml
+++ b/tests-fuzz/Cargo.toml
@@ -20,6 +20,7 @@ serde = { workspace = true }
 serde_json = { workspace = true }
 snafu = { workspace = true }
 sql = { workspace = true }
+sqlparser.workspace = true
 
 [dev-dependencies]
 dotenv = "0.15"
