feat: adding victoria metrics remote write

--- a/src/servers/Cargo.toml
+++ b/src/servers/Cargo.toml
@@ -102,6 +102,7 @@ tonic-reflection = "0.10"
 tower = { version = "0.4", features = ["full"] }
 tower-http = { version = "0.4", features = ["full"] }
 urlencoding = "2.1"
+zstd = "0.13"
 
 [target.'cfg(not(windows))'.dependencies]
 tikv-jemalloc-ctl = { version = "0.5", features = ["use_std"] }
