--- a/src/flow/Cargo.toml
+++ b/src/flow/Cargo.toml
@@ -33,4 +33,11 @@ package = "substrait"
 version = "0.17"
 
 [dev-dependencies]
+catalog.workspace = true
+common-catalog.workspace = true
+prost.workspace = true
+query.workspace = true
 serde_json = "1.0"
+session.workspace = true
+substrait.workspace = true
+table.workspace = true
