--- a/src/flow/Cargo.toml
+++ b/src/flow/Cargo.toml
@@ -32,6 +32,10 @@ strum.workspace = true
 tokio.workspace = true
 tonic.workspace = true
 
+[dependencies.substrait_proto]
+package = "substrait"
+version = "0.17"
+
 [dev-dependencies]
 catalog.workspace = true
 common-catalog.workspace = true
