ci run coverage after build

--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -262,6 +262,7 @@ jobs:
         run: cargo clippy --workspace --all-targets -- -D warnings
 
   coverage:
+    needs: build
     if: github.event.pull_request.draft == false
     runs-on: ubuntu-20.04-8-cores
     timeout-minutes: 60
