--- a/src/log-store/Cargo.toml
+++ b/src/log-store/Cargo.toml
@@ -24,8 +24,8 @@ common-runtime.workspace = true
 common-telemetry.workspace = true
 common-time.workspace = true
 common-wal.workspace = true
-futures.workspace = true
 futures-util.workspace = true
+futures.workspace = true
 lazy_static.workspace = true
 prometheus.workspace = true
 protobuf = { version = "2", features = ["bytes"] }
@@ -40,6 +40,7 @@ tokio.workspace = true
 [dev-dependencies]
 common-meta = { workspace = true, features = ["testing"] }
 common-test-util.workspace = true
+common-wal = { workspace = true, features = ["testing"] }
 itertools.workspace = true
 rand.workspace = true
 rand_distr = "0.4"
