--- a/src/index/Cargo.toml
+++ b/src/index/Cargo.toml
@@ -22,7 +22,9 @@ greptime-proto.workspace = true
 mockall.workspace = true
 moka = { workspace = true, features = ["sync", "future"] }
 pin-project.workspace = true
+prometheus.workspace = true
 prost.workspace = true
+puffin.workspace = true
 regex.workspace = true
 regex-automata.workspace = true
 serde.workspace = true
