--- a/src/puffin/Cargo.toml
+++ b/src/puffin/Cargo.toml
@@ -11,6 +11,7 @@ workspace = true
 async-compression = { version = "0.4", features = ["futures-io", "zstd"] }
 async-trait.workspace = true
 async-walkdir = "2.0.0"
+auto_impl = "1.2.0"
 base64.workspace = true
 bitflags.workspace = true
 common-error.workspace = true
