--- a/src/sql/Cargo.toml
+++ b/src/sql/Cargo.toml
@@ -24,6 +24,7 @@ datafusion-physical-expr.workspace = true
 datafusion-sql.workspace = true
 datatypes.workspace = true
 hex = "0.4"
+iso8601 = "0.6.1"
 itertools.workspace = true
 lazy_static.workspace = true
 regex.workspace = true
